Button Alignment Issue in Event Creation Form

--- a/src/style/app.module.css
+++ b/src/style/app.module.css
@@ -3536,8 +3536,12 @@ input[type='radio']:checked + label:hover {
 
 .dispflex {
   display: flex;
+  align-items: center;
+  justify-content: space-between;
+  margin-right: 271px;
+  margin-bottom: 32px;
+  margin-top: 11px;
 }
-
 .dispflex > input {
   width: 20%;
   border: none;
@@ -5797,7 +5801,7 @@ button[data-testid='createPostBtn'] {
 }
 
 .checkboxdivEvents > label {
-  margin-right: 50px;
+  margin-right: 230px;
 }
 .checkboxdivEvents > label > input {
   margin-left: 10px;
@@ -5807,12 +5811,15 @@ button[data-testid='createPostBtn'] {
   display: flex;
 }
 .checkboxdivEvents > div {
-  width: 50%;
+  width: 42%;
 }
 
 .dispflexEvents {
   display: flex;
   align-items: center;
+  justify-content: space-between;
+  margin-bottom: 25px;
+  margin-top: 10px;
 }
 .dispflexEvents > input {
   border: none;
